--- a/glint/css/main.css
+++ b/glint/css/main.css
@@ -1807,7 +1807,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
     font-family: "montserrat-medium", sans-serif;
     font-size: 6.3rem;
     line-height: 1.333;
-    margin-top: 0;
+/*    margin-top: 0;*/
     color: #FFFFFF;
 }
 
@@ -2201,8 +2201,8 @@ html.no-csstransitions .home-content__main {
 .s-about {
     padding-top: 16.2rem;
     padding-bottom: 9rem;
-    background-color: #39b54a;
-    color: #010507;
+    background-color: #f7941e;
+    color: #000000;
     position: relative;
 }
 
@@ -2219,6 +2219,7 @@ html.no-csstransitions .home-content__main {
 
 
 /* ------------------------------------------------------------------- 
+ * ## about stats
  * ## about stats
  * ------------------------------------------------------------------- */
 .about-stats {
